--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <title>To do</title>
     <meta charset="utf-8">
@@ -10,24 +11,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <link rel="stylesheet" href="./public/css/app.css">
-    
+
 </head>
+
 <body>
 
     <div class="container">
-        <h5>Witaj na stronie </h5>
+        <h5>Welcome on my website </h5>
         <div class="row">
             <div class="col s7">
                 <label>
                     <textarea id="input" class="materialize-textarea"></textarea>
-                    Zadanie
+                    Task
                 </label>
 
                 <div id="list-to-do"> </div>
 
             </div>
             <div class="col s5">
-                <a class="waves-effect waves-teal btn-flat" id="button" onclick="addTodo(event);">Dodaj button</a>
+                <a class="waves-effect waves-teal btn-flat" id="button" onclick="addTodo(event);">Add task</a>
             </div>
         </div>
 
@@ -36,4 +38,5 @@
     <script src="./public/js/app_classes.js"></script>
 
 </body>
+
 </html>
